common.css
body {
  margin: 0;
  font-family: Helvetica, Arial, sans-serif;
  color: #333;
  background-color: white;
}

/* nav bar */
#logo {
  width: 353px;
}

.nav {
  padding: 12px 24px;
  padding-right: 72px;
  overflow: hidden;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 3px solid #ffcd00;
  position: fixed;
  left: 0;
  right: 0;
  z-index: 100;
  background-color: white;
}

#nav-btns {
  display: flex;
}

.nav a {
  float: left;
  margin: 10px;
  display: block;
  color: black;
  text-decoration: none;
  font-weight: bold;
  text-transform: uppercase;
  font-size: large;
}

.nav a:hover {
  color: #0d7fc0;
}

#desktop-menu-toggle {
  display: block;
  background: none;
  border: none;
  font-size: large;
  font-weight: bold;
  text-transform: uppercase;
  cursor: pointer;
}

#mobile-menu-toggle {
  display: block;
  background: none;
  border: none;
  cursor: pointer;
}

/* Popup menu */
#pop-up-menu {
  position: fixed;
  top: 90px;
  right: 20px;
  width: 240px;
  background: white;
  box-shadow: 0 8px 20px rgba(0, 0, 0, .2);
  display: flex;
  flex-direction: column;
  padding: 20px;
  gap: 16px;
  z-index: 1000;
  opacity: 0;
  visibility: hidden;
  transform: translateY(-10px);
  transition: all .3s ease;
}

#pop-up-menu.open {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
}

#pop-up-menu a {
  text-decoration: none;
  color: black;
  font-weight: bold;
  text-transform: uppercase;
}

#desktop-menu-toggle:hover,
#mobile-menu-toggle:hover,
#pop-up-menu a:hover {
  color: #0d7fc0;
}

details {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

details summary:hover {
  text-decoration: underline;
}

details a:hover {
  transform: scale(1.05);
  transition: transform .3s ease, color .3s ease;
}

details a {
  display: flex;
  flex-direction: row;
}

/* footer */
footer {
  background-color: #222721;
  color: whitesmoke;
  padding: 48px;
  display: flex;
  flex-direction: column;
  gap: 96px;
}

#more-links {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

#more-links h2 {
  text-transform: uppercase;
}

#more-links a {
  text-decoration: none;
  color: white;
}

#more-links a:hover {
  text-decoration: underline;
  transform: scale(1.05);
  transition: transform .3s ease, color .3s ease;
  color: white;
}

#about-section,
#programs-section,
#resources-section,
#connect-section {
  display: flex;
  flex-direction: column;
  gap: 12px
}

#credits {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  gap: 24px;
}

#socials {
  display: flex;
  gap: 8px;
}

#social-img {
  width: 44px;
  height: 44px;
  border-radius: 50%;
  background-color: white;
}


/* media queries */
@media screen and (max-width: 600px) {

  body,
  nav,
  footer,
  #more-links,
  #credits {
    display: flex;
    flex-direction: column;
  }

  #desktop-menu-toggle {
    display: none;
  }

  #mobile-menu-toggle {
    display: block;
  }

  #pop-up-menu {
    top: 180px;
  }
}

.menu-toggle__bar1,
.menu-toggle__bar2,
.menu-toggle__bar3 {
  width: 21px;
  height: 3px;
  background-color: #000000;
  margin: 4px 0;
  transition: 0.3s;
}

.menu-toggle--open .menu-toggle__bar1 {
  transform: translate(0, 7px) rotate(-45deg);
}

.menu-toggle--open .menu-toggle__bar2 {
  opacity: 0;
}

.menu-toggle--open .menu-toggle__bar3 {
  transform: translate(0, -7px) rotate(45deg);
}

